@@ -1,6 +1,6 @@
 NAME = installbook
 
-SGML= install01.sgml install02.sgml installbook.sgml installcont.sgml installmeta.sgml   
+SGML = install01.sgml install02.sgml installbook.sgml installcont.sgml installmeta.sgml   
 
 GENERATED_SGML = installrevhistory.sgml
 
@@ -8,5 +8,7 @@ noinst_DATA = $(GENERATED_SGML)
 
 SGML_FILES = $(SGML) $(GENERATED_SGML)
 
-include $(top_srcdir)/Makefile.rules
+EXTRA_DIST = install.ent $(SGML)
 
+include $(top_srcdir)/Makefile.common
+include $(top_srcdir)/Makefile.rules
